<resources>
    <string name="app_name">Calculadora</string>

    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>

    <string name="igual">=</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
    <string name="multiplicacao">*</string>
    <string name="divisao">/</string>
    <string name="limpa">C</string>
</resources>
